--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "jest": {
     "preset": "jest-expo"
   },
-"dependencies": {
+  "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.0.2",
     "apollo-upload-client": "^18.0.1",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-file-system": "^17.0.1",
@@ -39,6 +40,7 @@
     "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal": "^13.0.1",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "~3.10.1",
