--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "cls && expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -15,12 +15,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@aws-sdk/client-chime-sdk-meetings": "^3.693.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.0.2",
+    "amazon-chime-sdk-js": "^3.25.0",
     "apollo-upload-client": "^18.0.1",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
@@ -46,11 +48,13 @@
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-permissions": "^5.1.0",
     "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
+    "react-native-webrtc": "^124.0.4",
     "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
